@@ -11,8 +11,9 @@ uses
   Forms, lazcontrols,
   DigIt_Types, DigIt_Bridge_Intf, DigIt_Bridge_Impl,
   DigIt_Settings, DigIt_Sources, DigIt_Session, DigIt_Utils,
-  DigIt_Source_Common, Digit_Source_Folder,
+  DigIt_Source_Common,
   Digit_Source_WIA, Digit_Source_Twain,
+  Digit_Source_Folder,
   DigIt_Destinations,
   DigIt_Form_Main, Digit_Bridge_Impl_UI_Form;
 
