@@ -11,7 +11,6 @@ object DigIt_Profiles_Form: TDigIt_Profiles_Form
   ClientWidth = 550
   DesignTimePPI = 120
   Position = poScreenCenter
-  LCLVersion = '4.99.0.0'
   OnShow = FormShow
   object panelButtons: TBCPanel
     Left = 0
@@ -123,13 +122,13 @@ object DigIt_Profiles_Form: TDigIt_Profiles_Form
           AutoSize = True
           Caption = 'Title'
           MinWidth = 100
-          Width = 100
+          Width = 49
         end      
         item
           AutoSize = True
           Caption = 'Source'
           MinWidth = 100
-          Width = 100
+          Width = 65
         end>
       HideSelection = False
       IconOptions.Arrangement = iaLeft
@@ -151,6 +150,7 @@ object DigIt_Profiles_Form: TDigIt_Profiles_Form
       Caption = 'Edit ...'
       Images = imgList
       ImageIndex = 0
+      OnClick = btEditProfileClick
     end
     object btDel: TSpeedButton
       Left = 392
