@@ -2,7 +2,9 @@ DigIt CHANGE LOG
 ======================
 
 
-2025/08/21 Added TDigIt_Source_Common classes;
+2025/08/22 Edit Profiles with new TDigIt_Sources (does not work);
+
+        21 Added TDigIt_Source_Common classes;
            Derived all Sources from TDigIt_Source_Common;
 
         20 Added Init,Release methods and Renamed OnSet to OnSelected in IDigIt_Params;
